--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,10 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "Kevin Schwarzwald"
   uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
+  email       : "kevin.schwarzwald@gmail.com"
+  bio         : "Interdisciplinary climate researcher helping inform climate impacts projections and decision-making under uncertainty"
+  avatar      : "headshot.jpeg"
+  twitter     : 
 
-Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
-  bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
-  twitter     : "name2"
-  google_plus : "Name"
