add CVs, clean up website for publishing

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,9 +2,9 @@
 
 Name Name:
   name        : "Kevin Schwarzwald"
-  uri         : "http://name.com"
+  uri         : "http://kevinschwarzwald.com"
   email       : "kevin.schwarzwald@gmail.com"
   bio         : "Interdisciplinary climate researcher helping inform climate impacts projections and decision-making under uncertainty"
   avatar      : "headshot.jpeg"
-  twitter     : 
+  googlescholar : "https://scholar.google.com/citations?user=mIwi0EwAAAAJ"
 
